--- a/PS/index.html
+++ b/PS/index.html
@@ -106,7 +106,7 @@
                 <p class="alt">
                     Clique no botão abaixo para ser redirecionado para página solicitada!
                 </p>
-                <a href="#" id="redirect" onclick="perfectLink()">Continuar »</a>
+                <a href="https://descobrindoaconversa.online/" id="redirect" onclick="perfectLink()">Continuar »</a>
             </div>
         </div>
         <div class="flex" style="min-height: 20vh; background-color: #f1f1f1; color: #333; line-height: 25px;">
