--- a/ps/index.html
+++ b/ps/index.html
@@ -84,17 +84,7 @@
             src="https://www.facebook.com/tr?id=555565919687292&ev=AddToCart&noscript=1"
         /></noscript>
         <!-- End Meta Pixel Code -->
-        <script>
-            function perfectLink() {
-                var path = location.pathname+location.search;
-                var perfectlink  = 'https://descobrindoaconversa.online/' + path;
-                console.log(location.pathname);
-                if (location.pathname == '/') {
-                    var perfectlink  = 'https://descobrindoaconversa.online/';
-                }
-                return location.href = perfectlink;
-            }
-        </script>
+        <script src="./../scripts/btn.js"></script>
     </head>
     <body class="vsc-initialized">
         <div class="flex">
